apisix/tests/api-routes-https/apisix-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mock-api-https
  annotations:
    # cert-manager
    cert-manager.io/issuer: apisix-ca 
    # cert-manager.io/cluster-issuer: apisix-ca
spec:
  ingressClassName: apisix
  rules:
    - host: ingress.apisix.local
      http:
        paths:
          - backend:
              service:
                name: mock-api-v1
                port:
                  number: 8080
            path: /v1
            pathType: Exact
          - backend:
              service:
                name: mock-api-v2
                port:
                  number: 8080
            path: /v2
            pathType: Exact
  tls:
  - hosts:
    - ingress.apisix.local
    secretName: ingress.apisix.local-ingress-tls
