apisix/tests/api-routes-https/cert-ca.yaml
# root issuer -> create CA -> CA issuer
apiVersion: cert-manager.io/v1
kind: Issuer
metadata:
  name: root-selfsigned
spec:
  selfSigned: {}
---
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: selfsigned-ca
spec:
  isCA: true
  secretName: apisix-ca
  duration: 87660h0m0s  # 10 years
  privateKey:
    algorithm: ECDSA
    size: 256
  issuerRef:
    name: root-selfsigned
    kind: Issuer
    group: cert-manager.io
---
apiVersion: cert-manager.io/v1
kind: Issuer
metadata:
  name: apisix-ca
spec:
  ca:
    secretName: apisix-ca
