apisix/tests/api-routes-https/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

namespace: test

resources:
  - ../mock-api
  - apisix-route.yaml
  - apisix-ingress.yaml
  - cert-ca.yaml

patches:
  - patch: |-
      - op: replace
        path: /spec/secret/namespace
        value: test
    target:
      kind: ApisixTls
      name: mock-api-tls
